[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/Slime_Lighting/slime_hit_anim_strip_3.png" type="Texture" id=1]
[ext_resource path="res://Resources_Scenes/SlimeLightning/Slime.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Slime_Lighting/slime_walk_anim_strip_15.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Slime_Lighting/slime_death_anim_strip_6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Slime_Lighting/slime_idle_anim_strip_5.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 0.5, 3.71535 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 0.5, 3.71535 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 8, 5.4245 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 91 ), SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "get_hit",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 6.66667, 5.125 )

[node name="Slime" type="KinematicBody2D" groups=["slime"]]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="l_ray" type="RayCast2D" parent="."]
position = Vector2( 0, 4.7 )
scale = Vector2( 0.15, 1 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 524290

[node name="hitbox_l" type="Area2D" parent="." groups=["hitbox", "hitbox_l"]]
position = Vector2( 0, -4 )
scale = Vector2( 1, 1.17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_l"]
position = Vector2( -7.5, 4.28515 )
shape = SubResource( 38 )

[node name="hitbox_r" type="Area2D" parent="." groups=["hitbox", "hitbox_r"]]
position = Vector2( 0, -4 )
scale = Vector2( 1, 1.17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_r"]
position = Vector2( 7.5, 4.28515 )
shape = SubResource( 39 )

[node name="hurtbox" type="Area2D" parent="." groups=["slime_hurtbox"]]
position = Vector2( 0, -4 )
scale = Vector2( 1, 1.17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, 2.5755 )
scale = Vector2( 0.87, 1 )
shape = SubResource( 40 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6.66667 )
frames = SubResource( 37 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.48353e-08, -0.8 )
scale = Vector2( 1, 1.2 )
shape = SubResource( 41 )

[connection signal="area_entered" from="hitbox_l" to="." method="_on_hitbox_l_area_entered"]
[connection signal="area_entered" from="hitbox_r" to="." method="_on_hitbox_r_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
